--- a/style.css
+++ b/style.css
@@ -4,7 +4,14 @@
 
 .column {
   float: left;
-  width: 30%;
+  width: 40%;
+  padding: 10px;
+  text-align: right
+}
+
+.column2 {
+  float: left;
+  width: 50%;
   padding: 10px;
 }
 
