--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body{
   text-align: left;
   background: #434347;
   color: white;
-  font-size: 16.5px;
+  font-size: 16.5px; }
 
 /* .row2:after {
   content: "";
@@ -56,11 +56,11 @@ body{
 }
  */
 
-#hovering {
+#hovering a{
   text-decoration: none; 
  }
 
-#hovering:hover {
+#hovering a:hover {
   text-decoration-line: underline; 
   text-decoration-style: wavy; 
   text-decoration-color: red;
