--- a/style.css
+++ b/style.css
@@ -65,3 +65,8 @@ body{
   text-decoration-style: wavy; 
   text-decoration-color: red;
 }
+
+b.under:hover {
+  text-decoration-line: underline;
+  text-decoration-style: wavy;
+}
