--- a/style.css
+++ b/style.css
@@ -69,5 +69,5 @@ body{
 b.under:hover {
   text-decoration-line: underline;
   text-decoration-style: wavy;
-  text-decoration-color: red;
+  text-decoration-color: #ed8298;
 }
