--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ b.under:hover {
   text-decoration-color: #ed8298;
 }
 
-.hover-title {
+/* .hover-title {
   display: inline;
   pointer-events: auto;
   cursor: pointer;
@@ -109,4 +109,17 @@ body:not(.mobile) .hover-title:hover + .hover-image {
   width: auto !important;
   height: auto !important;
   margin-bottom: 0;
+} */
+
+.tooltip {
+  text-decoration:none;
+  position:relative;
+}
+.tooltip span {
+  display:none;
+}
+.tooltip:hover span {
+  display:block;
+  position:fixed;
+  overflow:hidden;
 }
