--- a/style.css
+++ b/style.css
@@ -152,3 +152,6 @@ body:not(.mobile) .hover-title:hover + .hover-image {
   height: auto !important;
   margin-bottom: 0;
 } */
+
+.highlight:hover {
+  background: #1c1c1c;}
