--- a/style.css
+++ b/style.css
@@ -153,5 +153,5 @@ body:not(.mobile) .hover-title:hover + .hover-image {
   margin-bottom: 0;
 } */
 
-.highlight:hover {
-  background: #1c1c1c;}
+u.highlight:hover {
+  background: yellow;}
