--- a/style.css
+++ b/style.css
@@ -154,4 +154,4 @@ body:not(.mobile) .hover-title:hover + .hover-image {
 } */
 
 u.highlight:hover {
-  background: yellow;}
+  background: #F7B5CA;}
