--- a/style.css
+++ b/style.css
@@ -154,4 +154,5 @@ body:not(.mobile) .hover-title:hover + .hover-image {
 } */
 
 u.highlight:hover {
-  background: #F7B5CA;}
+  background: #F7B5CA;
+  text-decoration: none; }
