--- a/style.css
+++ b/style.css
@@ -153,6 +153,11 @@ body:not(.mobile) .hover-title:hover + .hover-image {
   margin-bottom: 0;
 } */
 
+.highlight {
+  text-decoration: underline;
+}
+
+
 .highlight:hover {
   background: #F7B5CA;
   text-decoration: none; }
