--- a/style.css
+++ b/style.css
@@ -198,18 +198,19 @@ body {
 
 footer {
   text-align: center;
-  font-size: 17px;
+  font-size: 16px;
   font-family: poppins;
   padding: 3px;
   background-color: grey;
   color: white;
+  line-height: 0.9;
 }
 
-#footer a{
+a.footer{
   text-decoration: none; 
  }
 
-#footer a:hover {
+a.footer:hover {
   text-decoration-line: underline; 
   text-decoration-style: wavy; 
   text-decoration-color: rgb(224, 193, 193);
