--- a/style.css
+++ b/style.css
@@ -196,21 +196,21 @@ body {
 
 }
 
-footer {
+#footer {
   text-align: center;
   font-size: 16px;
   font-family: poppins;
   padding: 3px;
   background-color: grey;
   color: white;
-  line-height: 0.9;
+  line-height: 0.4;
 }
 
-a.footer{
+#footer a{
   text-decoration: none; 
  }
 
-a.footer:hover {
+#footer a:hover {
   text-decoration-line: underline; 
   text-decoration-style: wavy; 
   text-decoration-color: rgb(224, 193, 193);
