--- a/style.css
+++ b/style.css
@@ -198,12 +198,14 @@ body {
 
 #footer {
   text-align: center;
+  font-size: 16px;
   font-family: poppins;
   padding: 3px;
   background-color: grey;
+  color: white;
 }
 
-#footer a{
+#footer{
   text-decoration: none; 
  }
 
