--- a/style.css
+++ b/style.css
@@ -201,7 +201,7 @@ body {
   font-size: 16px;
   font-family: poppins;
   padding: 3px;
-  background-color: grey;
+  background-color: #434347;
   color: white;
 }
 
