--- a/style.css
+++ b/style.css
@@ -13,14 +13,16 @@ body{
 .column {
   float: left;
   width: 30%;
-  padding: 16px;
+  padding-top: 16px;
+  padding-left: 16px;
+  padding-right: 16px;
   text-align: right;
 }
 
 .column2 {
   float: right;
   width: 70%;
-  padding: 10px;
+  padding-top: 10px;
   padding-right: 20px;
   padding-left: 20px
 }
@@ -200,14 +202,13 @@ body {
   text-align: center;
   font-size: 16px;
   font-family: poppins;
-  padding: 3px;
+  padding: 2.7px;
   background-color: #434347;
   color: white;
 }
 
 #footer{
   text-decoration: none; 
-  link
  }
 
 #footer a:hover {
